--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
-h1, h2 {
+h1,
+h2 {
   font-family: Lato;
+}
+
+.flash {
+  position: relative;
+  margin: 0;
+  height: auto;
+  width: 100%;
+  background: url('https://raw.githubusercontent.com/sanqit/x-ray-mask/main/img/hand1.png')
+    no-repeat;
+  background-size: 100% auto;
+}
+
+.x-ray {
+  width: 100%;
+  margin: 0;
+  mask-image: url('https://raw.githubusercontent.com/sanqit/x-ray-mask/main/img/hand1.png');
+  -webkit-mask-image: url('https://raw.githubusercontent.com/sanqit/x-ray-mask/main/img/hand1.png');
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: 100px 100px;
+  -webkit-mask-size: 100px 100px;
+  cursor: none;
 }
